--- a/Css/style.css
+++ b/Css/style.css
@@ -35,7 +35,6 @@
     max-width: 1110px;
     width: 90%;
     margin: 0 auto;
-    background-color: aquamarine;
     display: flex;
     justify-content: space-between;
 }
@@ -82,6 +81,32 @@
 .image-right{
     width: 100%;
 }
+/* Section2 */
+.section2{
+    background-color: #F3F3F3;
+    padding: 64px 0;
+    margin-top: 30px;
+}
+.wraper3{
+    max-width: 1140px;
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    column-gap: 30px;
+}
+.small-one{
+    display: flex;
+    align-items: center;
+}
+.wraper3-div1{
+    width: 360px;
+}
+.wraper3-h3{
+    margin-left: 16px;
+}
+.wraper3-p1{
+    margin-top: 16px;
+}
 /* Responsive */
 @media(max-width:1024px){
     .wraper2{
@@ -106,12 +131,26 @@
     .section1-p1{
       text-align: center;
     }
+    .wraper3{
+        column-gap: 60px;
+    }
 }
 @media (max-width: 744px){
     .small-block{
         flex-direction: column;
     }
-
+    .wraper3{
+        flex-direction: column;
+    }
+    .wraper3-div1{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        flex-direction: column;
+    }
+    
 }
 @media(max-width: 480px){
     .nav-ul{
