--- a/Css/style.css
+++ b/Css/style.css
@@ -107,6 +107,67 @@
 .wraper3-p1{
     margin-top: 16px;
 }
+/* Section3 */
+.section-block{
+    background-color: black;
+    padding: 96px 0;
+}
+.section-block-main{
+    max-width: 1140px;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+
+}
+.all-text{
+    color: white;
+}
+.block-right{
+    margin-left: 133px;
+    margin-top: 80px;
+}
+.block-right{
+    width: 100%;
+    width: 503px;
+}
+/* Section-last */
+.bg-image{
+    background-image: url('../images/image-main.png');
+    width: 100%;
+    height: 564px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.action-white{
+    background-color: white;
+    color: black;
+    width: 84px;
+    height: 40px;
+    border-radius: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.bgg-text{
+    color: white;
+    max-width: 540px;
+    width: 90%;
+    text-align: center;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    flex-direction: column;
+
+}
+.bg-h3{
+    font-size: 16px;
+}
+.bg-p{
+    font-size: 40px;
+}
 /* Responsive */
 @media(max-width:1024px){
     .wraper2{
@@ -133,6 +194,14 @@
     }
     .wraper3{
         column-gap: 60px;
+    }
+    .section-block-main{
+        flex-direction: column;
+    }
+    .block-right{
+        max-width: 960px;
+        width: 90%;
+        margin: 0 auto;
     }
 }
 @media (max-width: 744px){
