--- a/Css/style.css
+++ b/Css/style.css
@@ -164,9 +164,11 @@
 }
 .bg-h3{
     font-size: 16px;
+    margin-bottom: 10px;
 }
 .bg-p{
     font-size: 40px;
+    margin-bottom: 10px;
 }
 /* Responsive */
 @media(max-width:1024px){
